refactor(compiler): unify bean discovery with BeanDefinition DTO
- Replace AptBeanDefinition with BeanDefinition (string-based DTO)
- APT stage: TypeElement -> BeanDefinition
- Jandex stage: ClassInfo -> BeanDefinition (no TypeElement required)
- All downstream stages (dependency resolution, code generation) use only strings
- Remove <incremental> from maven-compiler-plugin config (deprecated in 3.x)